college prj/force-app/main/default/objects/Non_Technical__c/Non_Technical__c.object-meta.xml
<CustomObject>
    <label>Non Technical</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Technicals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>