college prj/force-app/main/default/objects/Non_Technical__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fee__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>85000</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>