college prj/force-app/main/default/objects/Non_Technical__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <label>Book Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>