college prj/force-app/main/default/objects/Non_Technical__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exam Fee</fullName>
            </value>
            <value>
                <fullName>Tuition Fee</fullName>
            </value>
            <value>
                <fullName>Admission Fee</fullName>
            </value>
            <value>
                <fullName>Placement Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>