college prj/force-app/main/default/objects/Non_Technical__c/fields/Select_SEM__c.field-meta.xml
<CustomField>
    <fullName>Select_SEM__c</fullName>
    <label>Select SEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEM-1</fullName>
            </value>
            <value>
                <fullName>SEM-2</fullName>
            </value>
            <value>
                <fullName>SEM-3</fullName>
            </value>
            <value>
                <fullName>SEM-4</fullName>
            </value>
            <value>
                <fullName>SEM-5</fullName>
            </value>
            <value>
                <fullName>SEM-6</fullName>
            </value>
            <value>
                <fullName>SEM-7</fullName>
            </value>
            <value>
                <fullName>SEM-8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>