college prj/force-app/main/default/objects/Non_Technical__c/fields/Subject1__c.field-meta.xml
<CustomField>
    <fullName>Subject1__c</fullName>
    <label>Subject1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>