college prj/force-app/main/default/objects/Non_Technical__c/fields/Subject3__c.field-meta.xml
<CustomField>
    <fullName>Subject3__c</fullName>
    <label>Subject3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>