college prj/force-app/main/default/objects/Non_Technical__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Select_SEM__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>chemistry</fullName>
            </value>
            <value>
                <fullName>M-1</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>M-2</fullName>
            </value>
            <value>
                <fullName>Environment Science</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Mechical</fullName>
            </value>
            <value>
                <fullName>BEE</fullName>
            </value>
            <value>
                <fullName>M-3</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>DBMS</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>MEFA</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>NOSQL</fullName>
            </value>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>Unix</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Machine Learning</fullName>
            </value>
            <value>
                <fullName>Grid Computing</fullName>
            </value>
            <value>
                <fullName>FLAT</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>IWP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>