college prj/force-app/main/default/objects/Non_Technical__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <defaultValue>100000</defaultValue>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>