college prj/force-app/main/default/objects/Non_Technical__c/recordTypes/Sem.recordType-meta.xml
<RecordType>
    <fullName>Sem</fullName>
    <active>true</active>
    <label>Sem</label>
</RecordType>